--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost/vehicle-maintenance-tracker
-spring.datasource.username=tylerlarsen
+spring.datasource.url=jdbc:postgresql://localhost/vehicle_maintenance
+spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
