--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,12 @@
 			<version>1.18.16</version>
 			<scope>provided</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-ses</artifactId>
+			<version>1.11.907</version>
+		</dependency>
 	</dependencies>
 
 	<build>
